--- a/LEE/index.css
+++ b/LEE/index.css
@@ -6,41 +6,73 @@ body {
   margin: 0;
 }
 
-.service {
-  display: flex;
+#mainService {
   width: 100%;
   max-width: 1200px;
-  height: 679px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.line_news {
-  width: 100%;
-  height: 100%;
-  padding: 85px 0px;
-
+  height: 1433px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+#mainService .grid {
+  position: absolute;
+  height: 100%;
+  top: 160px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1px;
+  height: 100%;
+  background-image: repeating-linear-gradient(
+    to bottom,
+    #ccc 0,
+    #ccc 2px,
+    transparent 2px,
+    transparent 8px
+  );
+}
+
+.linkIcon img {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border: 1px solid #eee;
+  border-radius: 8px;
+}
+
+.service_Cnt {
+  width: 100%;
+  height: 679px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 85px 0px;
+}
+
+.service {
+  display: flex;
+  width: 100%;
+  height: 509px;
+}
+
 .text_area {
   line-height: 1.7;
+  padding: 0px 0px 0px 40px;
+  z-index: 1;
 }
 
 h3 {
   font-size: 40px;
   color: #1e1e1e;
   margin: 0 0 20px;
+  font-weight: 700;
 }
 
 span {
   font-size: 18px;
   color: #07b53b;
   margin: 0 0 20px;
+  font-weight: 500;
 }
 
 .desc {
@@ -61,4 +93,12 @@ span {
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+
+  font-size: 14px;
+}
+
+.image_area img {
+  width: 880px;
+  height: 559px;
+  z-index: 0;
 }
