--- a/PARK/css/service__category.css
+++ b/PARK/css/service__category.css
@@ -3,18 +3,23 @@
   height: 470px;
 }
 .service__category-buttonwrapper {
+  gap: 15px;
+
   display: flex;
   flex-direction: column;
+
+  align-items: flex-start;
 }
 
 .service__category button {
   margin-left: 40px;
   font-size: 13px;
+  font-weight: bold;
   line-height: 1.4;
 
-  color: #1e1e1eb3;
+  color: rgba(30, 30, 30, 0.7);
   background-color: white;
   padding: 8px 15px;
   border: 1px solid rgba(30, 30, 30, 0.2);
-  border-radius: 20px;
+  border-radius: 50px;
 }
