--- a/PARK/css/service__card.css
+++ b/PARK/css/service__card.css
@@ -1,12 +1,78 @@
-.service__card picture img {
+.service__category {
+  width: 100%;
+  max-width: 1200px;
+
+  display: flex;
+  justify-content: flex-end;
+}
+
+.service__card {
+  width: 270px;
+  height: 340px;
+  background-color: transparent;
+  border-radius: 4px;
+  background-color: white;
+  border: 1px solid red;
+  padding: 30px;
+  position: relative;
+  margin-left: 40px;
+}
+
+.service__card img {
   width: 70px;
   height: 70px;
   object-fit: cover;
 }
 
 .service__card-wrapper {
-  width: 890px;
-  margin-left: 310px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+
+  position: relative;
+}
+
+.card__textarea {
+  display: flex;
+  flex-direction: column;
+  line-height: 20px;
+}
+
+.card__textarea-title {
+  font-weight: bold;
+  font-size: 25px;
+  margin: 16px 0px;
+}
+.card__textarea-sub {
+  color: #616161;
+  font-size: 14px;
+}
+
+.card__textarea-more {
+  font-size: 25px;
+  color: #616161;
+  opacity: 0.5;
+
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+}
+
+.card__linkarea {
+  width: 270px;
+  height: 340px;
+  gap: 20px;
+  position: absolute;
+  top: 0px;
+  left: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card__linkarea-button {
+  width: 150px;
+  padding: 16px;
+  border: 1px solid hsla(0, 0%, 100%, 0.3);
+  font-size: 16px;
+  font-weight: 400;
 }
