--- a/PARK/css/service__category.css
+++ b/PARK/css/service__category.css
@@ -1,8 +1,9 @@
 .service__category {
-  width: 300px;
-  height: 470px;
+  margin-left: 310px;
 }
 .service__category-buttonwrapper {
+  width: 300px;
+  height: 470px;
   gap: 15px;
 
   display: flex;
@@ -11,7 +12,7 @@
   align-items: flex-start;
 }
 
-.service__category button {
+.service__cartegory-button {
   margin-left: 40px;
   font-size: 13px;
   font-weight: bold;
