--- a/PARK/css/service__header.css
+++ b/PARK/css/service__header.css
@@ -1,4 +1,5 @@
 .service__header {
+  margin-top: 180px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,6 +11,7 @@
   font-weight: bold;
   margin-bottom: 20px;
   line-height: 1.27;
+  margin-top: 150px;
 }
 
 .service__header-sub {
@@ -17,4 +19,5 @@
   font-weight: 500;
   color: #616161;
   line-height: 1.5;
+  margin-bottom: 70px;
 }
