--- a/SON/hero.css
+++ b/SON/hero.css
@@ -1,24 +1,24 @@
-.hero{
-    width:100vw;
-    height:100vh;
-    /* border:1px solid red; */
-    position: relative;
+.mvArea {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  min-width: 1200px;
+  line-height: 1.5;
 }
-.heroImg{
-    width: 35%;
-     height: 15%;
-    border:1px solid blue;
-    display: block;
-    position: absolute;
-     top: 35%;
-     left: 33%;
+.mvText {
+  position: absolute;
+  top: 35%;
+  left: 10%;
 }
-.heroImg1{
-    position: absolute;
-  width:100%;
-  height:100%;
-  overflow: hidden;
-  object-fit: cover;
-  z-index:4;
-
+.mainTitle {
+  font-size: 140px;
+  font-weight: 700;
+  color: white;
+}
+.mvSubText {
+  font-size: 40px;
+  text-indent: 8px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  color: white;
 }
