--- a/SON/index.css
+++ b/SON/index.css
@@ -1,53 +1,38 @@
-body {
-  overflow-x: hidden;
-}
-.loading {
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
-  position: relative;
+.ko {
   position: fixed;
-  z-index:9999;
+  width: 100%;
+  height: 75px;
+  opacity: 0.95;
+  background: #fff;
+  z-index: 11;
 }
-.loadingGreenBox {
-  width: 35%;
-  height: 15%;
-  background-color: #07b53b;
+.ko > div {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+}
+.ko > h1 {
   position: absolute;
-  top: 35%;
-  left: 33%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
+  top: 30px;
+  left: 30px;
 }
-.loadingWhiteBox{
-  background-color: white;
-    width: 35%;
-  height: 15%;
-    position: absolute;
-  top: 35%;
-  left: 33%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 3;
+.headerMenu {
+  position: relative;
+  text-align: center;
+  line-height: 3.5;
+  width: 520px;
+  height: 100%;
+  margin: 0 auto;
+  white-space: nowrap;
+  font-family: SFPro, Arial, Noto Sans JP, AppleSDGothicNeo, sans-serif;
+  font-weight: 700;
 }
-/* .loadingTransparentBox{
-    background-image: url("img/hero1.jpg");
-    width: 25%;
-  height: 15%;
-    position: absolute;
-  top: 35%;
-  left: 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index:4;
-} */
-.loadingGreenBoxText {
-  font-size: 50px;
-  font-weight: 500;
-  color: white;
-  margin-right: 5%;
+.headerMenu > li {
+  display: inline-block;
+  margin-right: 80px;
+  line-height: 1.23;
+  padding-bottom: 4px;
 }
