--- a/LEE/index.css
+++ b/LEE/index.css
@@ -18,17 +18,17 @@ body {
 #mainService .grid {
   position: absolute;
   height: 100%;
-  top: 160px;
+  top: 0px;
   left: 50%;
-  transform: translateX(-50%);
   width: 1px;
-  height: 100%;
-  background-image: repeating-linear-gradient(
-    to bottom,
-    #ccc 0,
-    #ccc 2px,
-    transparent 2px,
-    transparent 8px
+  background-size: 1px 5px;
+  background-repeat: repeat-y;
+  background-image: linear-gradient(
+    180deg,
+    #b2b2b2,
+    #b2b2b2 2px,
+    transparent 0px,
+    transparent 5px
   );
 }
 
