--- a/LEE/communication.css
+++ b/LEE/communication.css
@@ -1,4 +1,4 @@
-#communication {
+#Lcommunication {
   width: 100%;
   max-width: 1905px;
   height: 1450px;
@@ -8,7 +8,7 @@
   text-align: center;
 }
 
-.main_sub {
+.Lmain_sub {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   align-items: center;
 }
 
-.main_title {
+.Lmain_title {
   font-size: 60px;
   margin-bottom: 12px;
   padding: 0px 16px;
@@ -25,14 +25,14 @@
   font-weight: 700;
 }
 
-.sub_text {
+.Lsub_text {
   text-align: center;
   line-height: 1.6;
   color: #616161;
   font-size: 20px;
 }
 
-.contentsList {
+.LcontentsList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
@@ -42,14 +42,14 @@
   list-style: none;
 }
 
-.content img {
+.Lcontent img {
   width: 100%;
   height: auto;
   display: block;
   object-fit: cover;
 }
 
-.content {
+.Lcontent {
   display: grid;
   width: 360px;
   height: 402px;
@@ -59,22 +59,22 @@
   font-size: 14px;
 }
 
-.contentsList .box {
+.LcontentsList .box {
   margin: 0px 60px 36px 0px;
 }
 
-.contentsList .solo {
+.LcontentsList .solo {
   margin: 0px 0px 36px;
 }
 
-.onlyPc {
+.LonlyPc {
   font-size: 24px;
   margin: 36px auto 12px;
   color: #000000;
   text-align: center;
 }
 
-.singleBanner {
+.LsingleBanner {
   width: 100%;
   height: 100%;
   display: flex;
@@ -83,7 +83,7 @@
   text-align: center;
 }
 
-.Corporate_support {
+.LCorporate_support {
   position: relative;
   width: 100%;
   max-width: 1920px;
@@ -91,7 +91,7 @@
   overflow: hidden;
 }
 
-.Corporate_support img {
+.LCorporate_support img {
   position: absolute;
   top: 0;
   left: 0;
@@ -102,7 +102,7 @@
   z-index: -1;
 }
 
-.bannerTxt {
+.LbannerTxt {
   position: absolute;
   top: 50%;
   left: 50%;
