--- a/LEE/footer.css
+++ b/LEE/footer.css
@@ -1,4 +1,4 @@
-.ko {
+.Lko {
   width: 100%;
   padding: 0 20px 41px;
   margin: 0 auto;
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.downloadLinks {
+.LdownloadLinks {
   display: flex;
   width: 100%;
   max-width: 1160px;
@@ -18,7 +18,7 @@
   left: 0;
 }
 
-.downloadLinks ul {
+.LdownloadLinks ul {
   display: flex;
   margin: 0px 0px 36px;
   padding: 30px 0px;
