--- a/SON/index.css
+++ b/SON/index.css
@@ -1,4 +1,4 @@
-.ko {
+.Sko {
   position: fixed;
   width: 100%;
   height: 75px;
@@ -6,7 +6,7 @@
   background: #fff;
   z-index: 11;
 }
-.ko > div {
+.Sko > div {
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -14,12 +14,12 @@
   align-items: center;
   position: relative;
 }
-.ko > div > h1 {
+.Sko > div > h1 {
   position: absolute;
   top: 30px;
   left: 30px;
 }
-.headerMenu {
+.SheaderMenu {
   position: relative;
   text-align: center;
   line-height: 4.5;
@@ -29,13 +29,13 @@
   white-space: nowrap;
   font-weight: 700;
 }
-.headerMenu > li {
+.SheaderMenu > li {
   display: inline-block;
   margin-right: 80px;
   line-height: 1.23;
   padding-bottom: 4px;
 }
-.langMenuTop {
+.SlangMenuTop {
   display: block;
   width: 55px;
   top: 26px;
@@ -46,10 +46,10 @@
   z-index: 10;
   cursor: pointer;
 }
-.currentLang {
+.ScurrentLang {
   font-size: 14px;
 }
-.langMenu {
+.SlangMenu {
   display: none;
   position: absolute;
   background: white;
@@ -62,15 +62,15 @@
   top: 70px;
 }
 
-.langMenu.show {
+.SlangMenu.show {
   display: block;
 }
 
-.langMenu li {
+.SlangMenu li {
   padding: 5px 10px;
   cursor: pointer;
 }
 
-.langMenu li:hover {
+.SlangMenu li:hover {
   background-color: #eee;
 }
