--- a/PARK/css/service__header.css
+++ b/PARK/css/service__header.css
@@ -1,4 +1,4 @@
-.service__header {
+.Pservice__header {
   margin-top: 180px;
   display: flex;
   flex-direction: column;
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.service__header-title {
+.Pservice__header-title {
   font-size: 60px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -14,7 +14,7 @@
   margin-top: 150px;
 }
 
-.service__header-sub {
+.Pservice__header-sub {
   font-size: 20px;
   font-weight: 500;
   color: #616161;
