--- a/SON/index.css
+++ b/SON/index.css
@@ -5,8 +5,10 @@
   opacity: 0.95;
   background: #fff;
   z-index: 99999;
+  top: 0px;
+  left: 0px;
 }
-.Sko > div {
+.Sko > .Sko-box {
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -14,7 +16,7 @@
   align-items: center;
   position: relative;
 }
-.Sko > div > h1 {
+.Sko > .Sko-box > .Sko-bbox {
   position: absolute;
   top: 30px;
   left: 30px;
