--- a/LEE/footer.css
+++ b/LEE/footer.css
@@ -1,26 +1,137 @@
 .Lko {
   width: 100%;
+  max-width: 1200px;
+  height: 202px;
   padding: 0 20px 41px;
-  margin: 0 auto;
-  border: 1px solid red;
+  margin: 0px 352.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: 20px;
+  position: relative;
+}
+
+.LdownloadLinks {
+  display: flex;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  max-width: 1160px;
+  height: 100px;
+  align-items: center;
+  margin: 0px 0px 36px;
+  padding: 30px 0px;
+
+  border-bottom: 1px solid #eee;
+}
+
+.LdownloadLinks ul {
+  display: flex;
+  width: 900px;
+  height: 40px;
+}
+
+.LdownloadLinks ul li {
+  display: flex;
+  text-align: center;
+  font-size: 13px;
+  margin: 0px 14px 0px 0px;
+}
+
+.LdownloadLinks ul li::after {
+  content: "";
+  display: inline-block;
+
+  width: 1px;
+  height: 1em;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 12px 0px 0px 15px;
+  vertical-align: bottom;
+}
+
+.LdownloadLinks ul li:first-child::after {
+  content: none;
+}
+
+.LdownloadLinks ul li:last-child::after {
+  content: none;
+}
+
+.LdownloadLinks ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+  color: #1e1e1e;
+}
+
+.LdownloadLinks ul li a i {
+  font-size: 20px;
+}
+
+.LdownloadLinks ul img {
+  width: 40px;
+  height: 40px;
+  border-radius: 9px;
+}
+
+/* externalLinks */
+
+.LexternalLinks {
+  position: absolute;
+
+  bottom: 0;
+  width: 1160px;
+  height: 25px;
+  display: flex;
+  transform: translate(0%, -150%);
+  font-size: 13px;
+}
+
+.Lko .LexternalLinks .LfooterLinks {
+  display: flex;
+}
+
+.Lcopyright {
+  font-size: 13px;
+  margin: 0px 40px 0px 0px;
+}
+
+.LfooterLinks li {
+  margin: 0px 14px 0px 0px;
+}
+.LfooterLinks li::after {
+  content: "";
+  display: inline-block;
+
+  width: 1px;
+  height: 1em;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 0px 0px 0px 13px;
+  vertical-align: bottom;
+}
+
+.LfooterLinks li:last-child::after {
+  content: none;
+}
+
+.LsnsLink {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 22px;
+}
+
+.LsnsLink .Lyoutube {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.LdownloadLinks {
-  display: flex;
-  width: 100%;
-  max-width: 1160px;
-  height: 100px;
-  border: 1px solid red;
-  top: 0;
-  left: 0;
-}
-
-.LdownloadLinks ul {
-  display: flex;
-  margin: 0px 0px 36px;
-  padding: 30px 0px;
-  font-size: 20px;
+.LsnsLink .Lyoutube i {
+  font-size: 40px;
+  line-height: 1;
+  text-align: center;
 }
