--- a/SON/index.css
+++ b/SON/index.css
@@ -5,15 +5,10 @@
   opacity: 0.95;
   background: #fff;
   z-index: 99999;
-<<<<<<< HEAD
   top: 0px;
   left: 0px;
-=======
-  top: 0;
-  left: 0;
->>>>>>> 6f1199eb0c45740bf3f42242d1a647a8410460b5
 }
-.Sko > .Sko-box {
+.Sko > div {
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -21,7 +16,7 @@
   align-items: center;
   position: relative;
 }
-.Sko > .Sko-box > .Sko-bbox {
+.Sko > div > h1 {
   position: absolute;
   top: 30px;
   left: 30px;
