--- a/LEE/communication.css
+++ b/LEE/communication.css
@@ -113,3 +113,73 @@
   z-index: 1;
   white-space: nowrap;
 }
+
+@media (max-width: 878px) {
+  #Lcommunication {
+    width: 461px;
+    height: 2999px;
+    padding: 80px 20px;
+  }
+  .Lmain_sub {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .Lmain_title {
+    font-size: 28px;
+    margin: 0px 0px 26px;
+    padding: 0px 16px;
+    line-height: 1.334;
+    color: #1e1e1e;
+    font-weight: 700;
+  }
+
+  .Lsub_text {
+    text-align: center;
+    color: #616161;
+    font-size: 14px;
+  }
+
+  .LcontentsList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .Lcontent img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 421px;
+    height: 315px;
+  }
+
+  .Lcontent {
+    margin: 0px 60px 36px 0px;
+  }
+
+  .LcontentsList .box {
+  }
+
+  .LcontentsList .solo {
+    margin: 0px 60px 36px 0px;
+  }
+
+  .LonlyPc {
+    font-size: 20px;
+    margin: 16px 0px 12px;
+  }
+
+  .LCorporate_support {
+    width: 640px;
+    height: 140px;
+  }
+
+  .LbannerTxt {
+    font-size: 20px;
+  }
+}
