--- a/LEE/footer.css
+++ b/LEE/footer.css
@@ -79,13 +79,11 @@
 
 .LexternalLinks {
   position: absolute;
-
-  bottom: 0;
-  width: 1160px;
-  height: 25px;
+  bottom: 41px;
+  left: 0;
+  width: 100%;
   display: flex;
-  transform: translate(0%, -150%);
-  font-size: 13px;
+  justify-content: flex-start;
 }
 
 .Lko .LexternalLinks .LfooterLinks {
@@ -95,24 +93,6 @@
 .Lcopyright {
   font-size: 13px;
   margin: 0px 40px 0px 0px;
-}
-
-.LfooterLinks li {
-  margin: 0px 14px 0px 0px;
-}
-.LfooterLinks li::after {
-  content: "";
-  display: inline-block;
-
-  width: 1px;
-  height: 1em;
-  background-color: rgba(0, 0, 0, 0.2);
-  margin: 0px 0px 0px 13px;
-  vertical-align: bottom;
-}
-
-.LfooterLinks li:last-child::after {
-  content: none;
 }
 
 .LsnsLink {
@@ -134,4 +114,108 @@
   font-size: 40px;
   line-height: 1;
   text-align: center;
+}
+
+@media (max-width: 878px) {
+  .Lko {
+    width: 100%;
+    max-width: 461px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font: 20px;
+    position: relative;
+    padding: 31px 20px 135px;
+  }
+
+  .LdownloadLinks {
+    display: none;
+  }
+
+  .LdownloadLinks ul {
+    display: none;
+  }
+
+  .LdownloadLinks ul li {
+  }
+
+  .LdownloadLinks ul li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    color: #1e1e1e;
+  }
+
+  .LdownloadLinks ul li a i {
+    font-size: 20px;
+  }
+
+  .LdownloadLinks ul img {
+    width: 40px;
+    height: 40px;
+    border-radius: 9px;
+  }
+
+  /* externalLinks */
+
+  .LexternalLinks {
+    top: 0;
+    width: 421px;
+    height: 104px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+  }
+
+  .Lko .LexternalLinks .LfooterLinks {
+    display: flex;
+  }
+
+  .Lcopyright {
+    font-size: 13px;
+  }
+
+  .LfooterLinks li {
+    margin: 0px 14px 0px 0px;
+  }
+  .LfooterLinks li::after {
+    content: "";
+    display: inline-block;
+
+    width: 1px;
+    height: 1em;
+    background-color: rgba(0, 0, 0, 0.2);
+    margin: 0px 0px 0px 13px;
+    vertical-align: bottom;
+  }
+
+  .LfooterLinks li:last-child::after {
+    content: none;
+  }
+
+  .LsnsLink {
+    position: absolute;
+    right: 0;
+    width: 30px;
+    height: 22px;
+  }
+
+  .LsnsLink .Lyoutube {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .LsnsLink .Lyoutube i {
+    font-size: 40px;
+    line-height: 1;
+    text-align: center;
+  }
 }
