--- a/LEE/index.css
+++ b/LEE/index.css
@@ -270,3 +270,108 @@ span {
   background-color: #fff;
   left: -4px;
 }
+
+@media (max-width: 878px) {
+  body {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* 왼쪽 점선 */
+  #LmainService .Lgrid {
+    left: 10%;
+  }
+  /* 동그라미 없음 */
+  #LmainService .Lgrid::before,
+  .Lgrid::after {
+    display: none;
+  }
+
+  #LmainService .Lgrid .Ldot.bottom {
+    display: none;
+  }
+
+  /* 링크 아이콘 이미지 */
+  .LlinkIcon img {
+    width: 36px;
+    height: 36px;
+    left: -10px;
+
+    border-radius: 7px;
+  }
+
+  /* 텍스트 아레아, 이미지 아레아 전체 */
+  .Lservice_Cnt {
+    width: 100%;
+    height: 679px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 85px 0px;
+  }
+
+  .Lservice {
+    display: flex;
+    width: 100%;
+    height: 509px;
+  }
+
+  .Ltext_area {
+    line-height: 1.7;
+    padding: 0px 0px 0px 40px;
+    z-index: 1;
+  }
+
+  h3 {
+    font-size: 22px;
+    color: #1e1e1e;
+    margin: 0 0 15px;
+    font-weight: 700;
+  }
+
+  span {
+    font-size: 14px;
+    color: #07b53b;
+    margin: 0 0 12px;
+    font-weight: 500;
+  }
+
+  .Ldesc {
+    width: 374px;
+    font-size: 14px;
+    color: #777777;
+    margin: 0 0 28px;
+  }
+
+  /* link 사이즈 */
+  .Lsite_link {
+    display: flex;
+    width: 113px;
+    height: 46px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+
+    font-size: 13px;
+  }
+
+  .Llink_tree .Lapple,
+  .Lgoogle {
+    display: none;
+  }
+
+  .Limage_area {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Limage_area .Lfirst_img {
+    top: 0;
+    left: 0;
+    order: -1;
+  }
+}
