--- a/SON/hero.css
+++ b/SON/hero.css
@@ -4,6 +4,17 @@
   height: 100vh;
   min-width: 1200px;
   line-height: 1.5;
+  top: 0px;
+  left: 0px;
+}
+.SmvArea > .mainImg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+  visibility: hidden;
 }
 .SmvText {
   /* border: 1px solid red; */
