--- a/SON/index.css
+++ b/SON/index.css
@@ -1,11 +1,11 @@
 /* 헤더 로고 */
 .Sko {
-  position: fixed;
+  position: fixed !important;
   width: 100%;
   height: 75px;
   opacity: 0.95;
   background: #fff;
-  z-index: 9999;
+  z-index: 999999;
   top: 0;
   left: 0;
 }
@@ -64,8 +64,8 @@
 .ScurrentLine {
   position: absolute;
   bottom: 20px;
-  left:0;
-  width:93px;
+  left: 0;
+  width: 93px;
   height: 4px;
   background-color: black;
   padding: 0;
@@ -130,6 +130,19 @@
 }
 
 /*  */
-
+.onlyPc {
+  display: block;
+}
 @media screen and (max-width: 768px) {
+  .onlyPc {
+    display: none;
+  }
+  .Sko {
+    position: fixed !important;
+    width: 100%;
+    height: 75px;
+    opacity: 0.95;
+    background: transparent;
+    z-index: 9999;
+  }
 }
