--- a/LEE/index.css
+++ b/LEE/index.css
@@ -17,7 +17,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  position: relative;
 }
 
 /* 중간 점선 */
@@ -37,6 +36,7 @@ body {
     transparent 0px,
     transparent 5px
   );
+  z-index: -1;
 }
 /* 점선 위 동그라미 */
 #LmainService .Lgrid::before {
@@ -66,6 +66,7 @@ body {
   top: 50%;
 }
 
+/* 마지막 동그라미 */
 #LmainService .Lgrid .Ldot.bottom {
   position: absolute;
   width: 20px;
@@ -86,7 +87,7 @@ body {
 
 /* 링크 아이콘 이미지 */
 .LlinkIcon img {
-  position: relative;
+  display: flex;
   width: 80px;
   height: 80px;
   border: 1px solid #eee;
@@ -104,8 +105,15 @@ body {
 
 .Lservice {
   display: flex;
+  align-items: center;
   width: 100%;
   height: 509px;
+}
+
+/* 텍스트 */
+.Ltext_box {
+  width: 100%;
+  height: 100%;
 }
 
 .Ltext_area {
@@ -135,6 +143,45 @@ span {
   margin: 0 0 60px;
 }
 
+/* 이미지 */
+.Limage_area {
+  width: 100%;
+  height: 100%;
+}
+
+.Limage_area .Lfirst_img {
+  display: flex;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: 2;
+}
+
+.Limage_area .Lsecond_img {
+  display: flex;
+  top: 0;
+  right: 3px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: 2;
+}
+
+.Lmusic {
+  line-height: 1.7;
+  padding: 0px 40px 0px 0px;
+  z-index: 1;
+}
+
+.Lmusic {
+  position: relative;
+  height: 400px;
+}
+
+/* 링크 트리 */
 .Llink_tree {
   display: flex;
 }
@@ -199,48 +246,8 @@ span {
   color: #fff;
 }
 
-.Limage_area {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.Limage_area .Lfirst_img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  z-index: 2;
-  margin-left: 3px;
-}
-
-.Limage_area .Lsecond_img {
-  position: absolute;
-  top: 0;
-  right: 3px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  z-index: 2;
-}
-
-.Lmusic {
-  line-height: 1.7;
-  padding: 0px 40px 0px 0px;
-  z-index: 1;
-}
-
-.Lmusic {
-  position: relative;
-  height: 400px;
-}
-
-.Lmusic .Lgrid {
-  position: absolute;
+/* 마지막 동그라미 */
+/* .Lmusic .Lgrid {
   height: 100%;
   top: 0px;
   left: 50%;
@@ -254,7 +261,7 @@ span {
     transparent 0px,
     transparent 5px
   );
-}
+} */
 
 /* 점선 위 동그라미 */
 .Lmusic .Lgrid::before {
@@ -279,7 +286,8 @@ span {
 
   /* 왼쪽 점선 */
   #LmainService .Lgrid {
-    left: 10%;
+    left: 8%;
+    top: 25px;
   }
   /* 동그라미 없음 */
   #LmainService .Lgrid::before,
@@ -293,33 +301,39 @@ span {
 
   /* 링크 아이콘 이미지 */
   .LlinkIcon img {
+    position: relative;
     width: 36px;
     height: 36px;
-    left: -10px;
+    left: -23px;
 
     border-radius: 7px;
   }
 
   /* 텍스트 아레아, 이미지 아레아 전체 */
+
   .Lservice_Cnt {
     width: 100%;
     height: 679px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 85px 0px;
+    padding: none;
   }
 
   .Lservice {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 509px;
+    position: relative;
+    top: -100px;
   }
 
   .Ltext_area {
     line-height: 1.7;
-    padding: 0px 0px 0px 40px;
+    padding: 30px 0px 0px 0px;
     z-index: 1;
+    order: 2;
   }
 
   h3 {
@@ -343,6 +357,12 @@ span {
     margin: 0 0 28px;
   }
 
+  .Ltext_box {
+    position: relative;
+    left: 7%;
+    top: -13%;
+  }
+
   /* link 사이즈 */
   .Lsite_link {
     display: flex;
@@ -364,14 +384,40 @@ span {
     display: none;
   }
 
+  /* 이미지 */
   .Limage_area {
     display: flex;
     flex-direction: column;
+    order: 1;
   }
 
   .Limage_area .Lfirst_img {
+    display: block;
+    margin: 0 auto;
+    width: 419px;
+    height: 312px;
     top: 0;
     left: 0;
-    order: -1;
+    content: url("image/firstimghp.png");
+    object-fit: cover;
+    /* position: relative;
+    top: -70px; */
+  }
+
+  .Limage_area .Lsecond_img {
+    display: block;
+    margin: 0 auto;
+    width: 419px;
+    height: 312px;
+    top: 0;
+    left: 0;
+    content: url("image/secondimghp.png");
+    object-fit: cover;
+  }
+
+  .Lsite_link:hover {
+    color: #1e1e1e;
+    background-color: #eee;
+    border: none;
   }
 }
