오전 마무리

--- a/SON/index.css
+++ b/SON/index.css
@@ -64,7 +64,7 @@
 .ScurrentLine {
   position: absolute;
   bottom: 20px;
-  left: 0;
+  left: 13px;
   width: 93px;
   height: 4px;
   background-color: black;
