--- a/LEE/scrollNavWrap.css
+++ b/LEE/scrollNavWrap.css
@@ -1,7 +1,6 @@
 .Lmain_screen {
   width: 100%;
   height: 100vh;
-  border: 1px solid red;
 }
 
 .LscrollNavWrap {
@@ -15,7 +14,6 @@
   align-items: center;
   width: 30px;
   height: 130px;
-  border: 2px solid red;
 }
 
 .LscrollNav {
@@ -38,26 +36,38 @@
   }
 }
 
-.LscrollLine {
+.LscrollNav::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
   width: 1px;
-  height: 50px;
-  border: 1px solid black;
-  margin-top: 5px;
-  animation: scrollLineMove 2s ease-in-out infinite;
+  height: 80px;
+  left: 16px;
+  bottom: -115px;
+  background-color: black;
+  animation: LineMove 0.9s ease-in-out infinite;
 }
 
-@keyframes scrollLineMove {
+@keyframes LineMove {
   0% {
-    transform: translateY(0);
-    opacity: 1;
+    height: 0;
+    bottom: -12px;
+  }
+  15% {
+    height: 12px;
+    bottom: -24px;
   }
   50% {
-    transform: translateY(30px);
-    opacity: 1;
+    height: 80px;
+    bottom: -92px;
+  }
+  85% {
+    height: 12px;
+    bottom: -108px;
   }
   100% {
-    transform: translateY(0);
-    opacity: 1;
+    height: 0;
+    bottom: -115px;
   }
 }
 
