--- a/LEE/scrollNavWrap.css
+++ b/LEE/scrollNavWrap.css
@@ -1,6 +1,9 @@
 .Lmain_screen {
   width: 100%;
   height: 100vh;
+  border: 1px solid red;
+  position: relative;
+  z-index: -5;
 }
 
 .LscrollNavWrap {
@@ -14,11 +17,13 @@
   align-items: center;
   width: 30px;
   height: 130px;
+  background-color: transparent;
+  z-index: 3;
 }
 
 .LscrollNav {
   position: relative;
-  color: black;
+  color: white;
   top: 0;
   font-size: 11px;
   animation: 1.4s ease 0s infinite normal none running equallyBound;
@@ -44,7 +49,7 @@
   height: 80px;
   left: 16px;
   bottom: -115px;
-  background-color: black;
+  background-color: white;
   animation: LineMove 0.9s ease-in-out infinite;
 }
 
