--- a/index.css
+++ b/index.css
@@ -1,10 +1,35 @@
-.SmvArea > .heroimgbox {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+@keyframes startHeader {
+  0% {
+    transform: translateY(-105%);
+  }
+  82% {
+    transform: translateY(-105%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
-.SmvArea > .heroimgbox > img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+
+@keyframes startTexArea {
+  0% {
+    opacity: 0;
+  }
+  93% {
+    opacity: 0;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.Sko {
+  animation-name: startHeader;
+  animation-duration: 3s;
+}
+.SmvText {
+  animation-name: startTexArea;
+  animation-duration: 2.5s;
 }
