--- a/PARK/css/service__category.css
+++ b/PARK/css/service__category.css
@@ -1,7 +1,20 @@
+.Pservice__category {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: 310px;
+
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+
 .Pservice__category-buttonwrapper {
   width: 300px;
-  height: 470px;
+  height: 100vh;
   gap: 15px;
+
+  position: sticky;
+  top: 20%;
 
   display: flex;
   flex-direction: column;
