--- a/PARK/css/service__category.css
+++ b/PARK/css/service__category.css
@@ -1,7 +1,7 @@
 .Pservice__category {
   width: 100%;
   max-width: 1200px;
-  margin-left: 310px;
+  margin: 0 auto;
 
   display: flex;
   justify-content: flex-end;
@@ -10,7 +10,7 @@
 
 .Pservice__category-buttonwrapper {
   width: 300px;
-  height: 100vh;
+  height: 100%;
   gap: 15px;
 
   position: sticky;
