--- a/LEE/index.css
+++ b/LEE/index.css
@@ -24,8 +24,8 @@ body {
 #LmainService .Lgrid {
   position: absolute;
   height: 100%;
-  height: 1433px;
-  top: 0;
+  height: 1405px;
+  top: 28px;
   left: 50%;
   width: 1px;
   background-size: 1px 5px;
