--- a/LEE/scrollNavWrap.css
+++ b/LEE/scrollNavWrap.css
@@ -1,9 +1,10 @@
 .Lmain_screen {
   width: 100%;
   height: 100vh;
-  border: 1px solid red;
   position: relative;
   z-index: -5;
+
+  border: 360px solid black;
 }
 
 .LscrollNavWrap {
@@ -23,7 +24,7 @@
 
 .LscrollNav {
   position: relative;
-  color: black;
+  color: white;
   top: 0;
   font-size: 11px;
   animation: 1.4s ease 0s infinite normal none running equallyBound;
@@ -49,7 +50,7 @@
   height: 80px;
   left: 16px;
   bottom: -115px;
-  background-color: black;
+  background-color: white;
   animation: LineMove 0.9s ease-in-out infinite;
 }
 
