--- a/PARK/css/service__card.css
+++ b/PARK/css/service__card.css
@@ -1,3 +1,10 @@
+.Pservice__card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  position: relative;
+}
+
 .Pservice__card {
   width: 270px;
   height: 340px;
@@ -8,7 +15,6 @@
   padding: 30px;
   position: relative;
   box-shadow: 10px 10px 20px -20px black;
-  overflow: hidden;
 }
 
 .Pservice__card img {
@@ -17,13 +23,6 @@
   object-fit: cover;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 16px;
-}
-
-.Pservice__card-wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-  position: relative;
 }
 
 .Pcard__textarea {
@@ -116,4 +115,51 @@
 
 .Pcard__linkarea-button:hover > .ri-download-line {
   display: block;
+}
+
+@media (max-width: 878px) {
+  .Pservice__card-wrapper {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    order: 2;
+
+    justify-content: center;
+    align-items: center;
+  }
+  .Pservice__card {
+    background-color: #f7f8f9;
+    width: 100%;
+    height: 121px;
+    margin: 0px 0px 0px 20px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    box-shadow: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  }
+  .Pcard__textarea {
+    width: 300px;
+    line-height: 0px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .Pcard__textarea-title {
+    font-size: 16px;
+    line-height: 5px;
+    margin: 0;
+  }
+  .Pcard__textarea-sub {
+    font-size: 13px;
+    line-height: 0px;
+  }
+  .Pcard__textarea-more {
+    display: none;
+  }
+  .Pcard__overlay {
+    display: none;
+  }
 }
