--- a/PARK/css/service__category.css
+++ b/PARK/css/service__category.css
@@ -4,8 +4,6 @@
   margin: 0 auto;
 
   display: flex;
-  justify-content: flex-end;
-  position: relative;
 }
 
 .Pservice__category-buttonwrapper {
@@ -23,7 +21,6 @@
 }
 
 .Pservice__category-button {
-  margin-left: 40px;
   font-size: 13px;
   font-weight: bold;
   line-height: 1.4;
@@ -33,4 +30,40 @@
   padding: 8px 15px;
   border: 1px solid rgba(30, 30, 30, 0.2);
   border-radius: 50px;
+}
+.clickbutton {
+  color: white;
+  background-color: #07b53b;
+  border: 1px solid #07b53b;
+}
+
+@media (max-width: 878px) {
+  .Pservice__category {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    gap: 50px;
+  }
+
+  .Pservice__category-buttonwrapper {
+    display: flex;
+    flex-direction: row;
+    order: 1;
+    width: 1100px;
+    position: relative;
+    margin-left: 20px;
+    top: 0;
+    gap: 5px;
+  }
+
+  .Pservice__category-button {
+    width: 10%;
+    height: 33px;
+    padding: 8px 15px;
+    font-size: 12px;
+
+    padding: 0;
+  }
 }
