--- a/SON/test.css
+++ b/SON/test.css
@@ -108,44 +108,50 @@
 @keyframes change {
   0% {
     background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
-    opacity: 1;
+    opacity: 9;
   }
-  10% {
-    opacity: 0.9;
+  40% {
+    opacity: 1; 
   }
-  20% {
-    opacity: 0.8;
+  45%{
+    opacity:1;
   }
-  30% {
-    opacity: 1;
-  }
-  33% {
+  50% {
     background-image: url("https://www.line.me/static/img/mv02_w1000.jpg");
+    opacity: 0.9; 
+  }
+  55%{
+    opacity:1;
+  }
+  60% {
     opacity: 1;
   }
-  43% {
-    opacity: 0.9;
-  }
-  53% {
-    opacity: 0.8;
-  }
-  63% {
-    opacity: 1;
-  }
-  66% {
-    background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
+  65% {
     opacity: 1;
   }
   70% {
-    opacity: 0.8;
-  }
+    opacity: 1;
+  }  
+  75% {
+    opacity: 1;
+  }  
   80% {
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  95% {
     opacity: 1;
   }
   100% {
     opacity: 1;
   }
 }
+
 
 .section-container {
   position: relative;
@@ -183,30 +189,32 @@
   width: 720px;
   height: 160px;
   background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
+  background-color: transparent;
   background-size: cover;
-  transform: scale(1.3);
   background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
   opacity: 0;
   transform-origin: left;
   animation: fadeIn 0s 1.8s ease-in-out forwards,
-    irisWipe 1s 1.8s ease-out forwards, change 10s 3s linear infinite;
+    irisWipe 1s 1.8s ease-out forwards, change 7s 3s linear infinite;
 }
-.background-image-wrapper {
-  position: absolute;
-  top: calc(50% - 80px);
-  left: calc(50% - 360px);
-  width: 720px;
-  height: 160px;
-  background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
-  background-size: cover;
-  transform: scale(1.3);
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 1;
-  opacity: 0;
-  transform-origin: left;
-  animation: fadeIn 0s 1.8s ease-in-out forwards,
-    irisWipe 1s 1.8s ease-out forwards, change 10s 3s linear infinite;
+@media (max-width: 878px) {
+  .section-container{
+    height:40vh;
+  }
+ .background-image{
+  width:36%;
+  height:500px;
+    animation: change 7s 3s linear infinite;
+    opacity: 1; /* fadeIn 잔상 제거 */
+    transform: none; /* irisWipe 잔상 제거 */
+    position: absolute;
+    top: calc(0%);
+    left: calc(0%);
+    background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
+ }
+ .animated-bar {
+  display: none;
+}
 }
