--- a/SON/test.css
+++ b/SON/test.css
@@ -137,17 +137,15 @@
 
 .background-image {
   position: absolute;
-  top: calc(50% - 80px);
-  left: calc(50% - 360px);
-  width: 720px;
-  height: 160px;
-  background-image: url("https://www.line.me/static/img/mv02_w1000.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 1;
-  opacity: 0;
-  transform-origin: left;
-  animation: fadeIn 0s 1.8s ease-in-out forwards,
-    irisWipe 1s 1.8s ease-out forwards;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1920px;
+  height: 953px;
+  box-sizing: border-box;
+  transition: width 0.5s ease, height 0.5s ease;
+  background-color: lightblue;
+  background: url(../LEE/img/background.jpg);
+
+  background-position: 50%, 50%;
 }
