--- a/SON/index.css
+++ b/SON/index.css
@@ -11,7 +11,7 @@
 }
 
 .Sko > div {
-  width:100%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -23,8 +23,8 @@
   top: 30px;
   left: 30px;
 }
-.logo{
-  position:absolute;
+.logo {
+  position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -61,7 +61,7 @@
   width: 520px;
   height: 100%;
   margin: 0 auto;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   font-weight: 700;
 }
 
@@ -86,7 +86,7 @@
 /* 언어 선택 */
 .SlangMenuTop {
   display: flex;
-  gap:5px;
+  gap: 5px;
   width: 55px;
   top: 26px;
   right: 30px;
@@ -96,10 +96,10 @@
   z-index: 10;
   cursor: pointer;
 }
-.iconLang{
+.iconLang {
   position: absolute;
-  right:60px;
-  bottom:-5px;
+  right: 60px;
+  bottom: -5px;
 }
 .ScurrentLang {
   font-size: 14px;
@@ -147,17 +147,33 @@
 
 /*  */
 .onlySp {
-  display:none;
+  display: none;
 }
 @media (max-width: 878px) {
-  .Sko{
+  .Sko {
     background-color: transparent;
   }
-  .onlyPc{
+  .onlyPc {
     display: none;
   }
   .onlySp {
-  display:block;
-  color:white
-}
+    display: block;
+    color: white;
+  }
+  .SheaderMenu {
+    position: relative;
+    text-align: center;
+    line-height: 4.5;
+    width: 400px;
+    height: 100%;
+    margin: 0 auto;
+    white-space: nowrap;
+    font-weight: 700;
+    top: 500px;
+    right: 0px;
+    background-color: white;
+  }
+  .SheaderMenu > li > a {
+    font-size: 12px;
+  }
 }
