--- a/SON/test.css
+++ b/SON/test.css
@@ -92,7 +92,7 @@
   60%,
   80% {
     opacity: 1;
-    transform: scale(1.2);
+    transform: scale(1);
     transform-origin: center;
   }
   100% {
@@ -108,50 +108,49 @@
 @keyframes change {
   0% {
     background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
-    opacity: 9;
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(1.4);
+    opacity: 0.8;
   }
   40% {
-    opacity: 1; 
-  }
-  45%{
-    opacity:1;
-  }
-  50% {
-    background-image: url("https://www.line.me/static/img/mv02_w1000.jpg");
-    opacity: 0.9; 
-  }
-  55%{
-    opacity:1;
+    transform: scale(1.3);
+    opacity: 0.85;
   }
   60% {
-    opacity: 1;
+    transform: scale(1.2);
+    opacity: 0.7;
   }
-  65% {
-    opacity: 1;
-  }
-  70% {
-    opacity: 1;
-  }  
-  75% {
-    opacity: 1;
-  }  
   80% {
-    opacity: 1;
-  }
-  85% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  95% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
+    transform: scale(1.1);
+    opacity: 0.6;
   }
 }
-
+@keyframes change2 {
+  0% {
+    background-image: url("https://www.line.me/static/img/mv02_w1920.jpg");
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(1.4);
+    opacity: 0.8;
+  }
+  40% {
+    transform: scale(1.3);
+    opacity: 0.85;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
+  80% {
+    transform: scale(1.1);
+    opacity: 0.6;
+  }
+}
 
 .section-container {
   position: relative;
@@ -197,15 +196,17 @@
   opacity: 0;
   transform-origin: left;
   animation: fadeIn 0s 1.8s ease-in-out forwards,
-    irisWipe 1s 1.8s ease-out forwards, change 7s 3s linear infinite;
+    irisWipe 1s 1.8s ease-out forwards, change 10s 3s linear infinite,
+    change2 10s 3s linear infinite;
 }
 @media (max-width: 878px) {
-  .section-container{
-    height:40vh;
+  .section-container {
+    height: 50vh;
+    overflow: hidden;
   }
- .background-image{
-  width:36%;
-  height:500px;
+  .background-image {
+    width: 36%;
+    height: 500px;
     animation: change 7s 3s linear infinite;
     opacity: 1; /* fadeIn 잔상 제거 */
     transform: none; /* irisWipe 잔상 제거 */
@@ -213,8 +214,8 @@
     top: calc(0%);
     left: calc(0%);
     background-image: url("https://www.line.me/static/img/mv01_w1000.jpg");
- }
- .animated-bar {
-  display: none;
-}
+  }
+  .animated-bar {
+    display: none;
+  }
 }
